--- a/index.html
+++ b/index.html
@@ -200,29 +200,23 @@
               quos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, voluptas!
             </h3>
             <h3 class="section-heading section-link">
-              <a href="mailto: zivgl66@gmail.com" target="_blank">Lorem ipsum dolor sit amet.</a>
+              <a href="#" target="_blank">Lorem ipsum dolor sit amet.</a>
             </h3>
             <h3 class="section-heading section-link">
-              <a href="https://github.com/Zivgl66" target="_blank">Lorem ipsum dolor sit amet.</a>
+              <a href="#" target="_blank">Lorem ipsum dolor sit amet.</a>
             </h3>
             <h3 class="section-heading section-link">
               <a
-                href="https://linkedin.com/in/ziv-gliser-b0734022b"
+                href="#"
                 target="_blank"
                 >Lorem ipsum dolor sit amet.</a
               >
             </h3>
             <h3 class="section-heading section-link">
-                  <a href="https://linktr.ee/zivgl66" target="_blank">Lorem ipsum dolor sit amet.</a>
+                  <a href="#" target="_blank">Lorem ipsum dolor sit amet.</a>
             </h3>
             <br />
             <br />
-            <h3 class="section-heading">
-              This website was inspired by:
-              <a href="https://bokoko33.me/" target="_blank"
-                >Lorem ipsum dolor sit amet.</a
-              >
-            </h3>
           </div>
         </section>
       </div>
